--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,10 @@
+asgiref==3.8.1
 Django==3.2.16
-djangorestframework==3.12.4
 django-cors-headers==3.13.0
+djangorestframework==3.12.4
+gunicorn==20.1.0
 psycopg2-binary==2.9.3
+python-dotenv==1.0.1
+pytz==2024.2
+sqlparse==0.5.3
+typing_extensions==4.12.2
