--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,10 @@
-# docker-compose.yml
-version: '3'
-
 volumes:
-  pg_data:
   static:
 
 services:
-  db:
-    image: postgres:13
-    env_file: .env
-    volumes:
-      - pg_data:/var/lib/postgresql/data
   backend:
     build: ./backend/
+    container_name: backend
     env_file: .env
     volumes:
       - static:/backend_static
@@ -20,13 +12,15 @@ services:
   frontend:
     env_file: .env
     build: ./frontend/
-    command: cp -r /app/build/. /frontend_static/
+    command: cp -r /app/build/. /static/
     volumes:
-      - static:/frontend_static
+      - static:/static
 
   gateway:
     build: ./gateway/
     env_file: .env
+    depends_on:
+      - backend
     volumes:
       - static:/staticfiles
     ports:
