--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-POSTGRES_DB=kittygram
-POSTGRES_USER=kittygram_user
-POSTGRES_PASSWORD=kittygram_password
+POSTGRES_DB=taski
+POSTGRES_USER=taski_user
+POSTGRES_PASSWORD=taski_password
 DB_NAME=db
 ALLOWED_HOSTS=<domain>,<server_ip>,127.0.0.1,localhost,0.0.0.0
 DEBUG_VALUE=<True>or<False>
