--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,8 +2,12 @@ asgiref==3.8.1
 Django==3.2.16
 django-cors-headers==3.13.0
 djangorestframework==3.12.4
+flake8==7.1.1
 gunicorn==20.1.0
+mccabe==0.7.0
 psycopg2-binary==2.9.3
+pycodestyle==2.12.1
+pyflakes==3.2.0
 python-dotenv==1.0.1
 pytz==2024.2
 sqlparse==0.5.3
